[gd_scene load_steps=8 format=2]

[ext_resource path="res://GameFile/GUI/Endless Wave Interface/Bar/Bar/Elexir.png" type="Texture" id=1]
[ext_resource path="res://GameFile/GUI/Endless Wave Interface/Bar/Bar/Gold.png" type="Texture" id=2]
[ext_resource path="res://GameFile/GUI/Endless Wave Interface/Bar/Bar/Metal.png" type="Texture" id=3]
[ext_resource path="res://GameFile/GUI/Endless Wave Interface/Bar/Bar/Bar.png" type="Texture" id=4]
[ext_resource path="res://GameFile/GUI/Endless Wave Interface/Bar/Bar/HP.png" type="Texture" id=5]
[ext_resource path="res://GameFile/GUI/Endless Wave Interface/Bar/Bar.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.254902, 0.321569, 0.568627, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.376471, 0.819608, 0.819608, 1 )

[node name="Bar" type="Control" groups=["Bar"]]
margin_right = 250.0
margin_bottom = 160.0
rect_min_size = Vector2( 250, 160 )
mouse_filter = 1
script = ExtResource( 6 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 12 )

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 15.0
margin_bottom = 6.0
custom_constants/margin_top = 6
custom_constants/margin_left = 8

[node name="GridContainer" type="GridContainer" parent="Panel/MarginContainer"]
margin_left = 8.0
margin_top = 6.0
margin_right = 265.0
margin_bottom = 166.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 4
custom_constants/hseparation = 10
columns = 2

[node name="HP_Planet" type="Label" parent="Panel/MarginContainer/GridContainer"]
margin_top = 4.0
margin_right = 64.0
margin_bottom = 18.0
text = "XP Planet:"

[node name="HP_Planet_Bar" type="TextureProgress" parent="Panel/MarginContainer/GridContainer"]
margin_left = 74.0
margin_right = 227.0
margin_bottom = 23.0
size_flags_horizontal = 0
size_flags_vertical = 0
value = 50.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
texture_progress_offset = Vector2( 3, 3 )

[node name="Num_HP" type="Label" parent="Panel/MarginContainer/GridContainer/HP_Planet_Bar"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button" type="Button" parent="Panel/MarginContainer/GridContainer/HP_Planet_Bar"]
anchor_right = 1.0
anchor_bottom = 1.0
action_mode = 0
keep_pressed_outside = true
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Level" type="Label" parent="Panel/MarginContainer/GridContainer"]
margin_top = 27.0
margin_right = 64.0
margin_bottom = 41.0
text = "level:"

[node name="Num_Level" type="Label" parent="Panel/MarginContainer/GridContainer"]
margin_left = 74.0
margin_top = 27.0
margin_right = 227.0
margin_bottom = 41.0

[node name="Gold" type="Label" parent="Panel/MarginContainer/GridContainer"]
margin_top = 49.0
margin_right = 64.0
margin_bottom = 63.0
text = "Gold:"

[node name="Gold_Bar" type="TextureProgress" parent="Panel/MarginContainer/GridContainer"]
margin_left = 74.0
margin_top = 45.0
margin_right = 227.0
margin_bottom = 68.0
value = 50.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 2 )
texture_progress_offset = Vector2( 3, 3 )

[node name="Num_Gold" type="Label" parent="Panel/MarginContainer/GridContainer/Gold_Bar"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button" type="Button" parent="Panel/MarginContainer/GridContainer/Gold_Bar"]
anchor_right = 1.0
anchor_bottom = 1.0
action_mode = 0
keep_pressed_outside = true
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Elixir" type="Label" parent="Panel/MarginContainer/GridContainer"]
margin_top = 76.0
margin_right = 64.0
margin_bottom = 90.0
text = "Elixir:"

[node name="Elixir_Bar" type="TextureProgress" parent="Panel/MarginContainer/GridContainer"]
margin_left = 74.0
margin_top = 72.0
margin_right = 227.0
margin_bottom = 95.0
size_flags_horizontal = 0
size_flags_vertical = 0
value = 50.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 1 )
texture_progress_offset = Vector2( 3, 3 )

[node name="Num_Elixir" type="Label" parent="Panel/MarginContainer/GridContainer/Elixir_Bar"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button" type="Button" parent="Panel/MarginContainer/GridContainer/Elixir_Bar"]
anchor_right = 1.0
anchor_bottom = 1.0
action_mode = 0
keep_pressed_outside = true
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Metal" type="Label" parent="Panel/MarginContainer/GridContainer"]
margin_top = 103.0
margin_right = 64.0
margin_bottom = 117.0
text = "Metal:"

[node name="Metal_Bar" type="TextureProgress" parent="Panel/MarginContainer/GridContainer"]
margin_left = 74.0
margin_top = 99.0
margin_right = 227.0
margin_bottom = 122.0
size_flags_horizontal = 0
size_flags_vertical = 0
value = 50.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )
texture_progress_offset = Vector2( 3, 3 )
tint_progress = Color( 0.321569, 0.439216, 0.509804, 1 )

[node name="Num_Metal" type="Label" parent="Panel/MarginContainer/GridContainer/Metal_Bar"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button" type="Button" parent="Panel/MarginContainer/GridContainer/Metal_Bar"]
anchor_right = 1.0
anchor_bottom = 1.0
action_mode = 0
keep_pressed_outside = true
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Diamond" type="Label" parent="Panel/MarginContainer/GridContainer"]
margin_top = 126.0
margin_right = 64.0
margin_bottom = 140.0
text = "Diamond:"

[node name="Num_Diamond" type="Label" parent="Panel/MarginContainer/GridContainer"]
margin_left = 74.0
margin_top = 126.0
margin_right = 227.0
margin_bottom = 140.0
